--- a/src/index.html
+++ b/src/index.html
@@ -9,3 +9,19 @@
     <script src="https://kit.fontawesome.com/7a5990c7cd.js" crossorigin="anonymous"></script>
 </head>
 <body >
+       <!--Menu bar-->
+       <div class="1stmenu flex  " id="1st-con">
+        <div class="basis-2/3 bg-slate-200">
+            <ul class="flex text-gray-700">
+                <li class="p-4 border-r-2 border-gray-500 ml-6"><a href="">FAQs</a></li>
+                <li class="p-4 border-r-2 border-gray-500"><a href="">Support</a></li>
+                <li class="p-4 border-r-2 border-gray-500"><a href="">Privacy</a></li>
+                <li class="p-4 border-r-2 border-gray-500"><a href="">Career</a></li>
+            </ul>
+        </div>
+        <div class="text-white bg-red-700 basis-1/3 flex  ">
+           <div class="basis-1/2 text-center m-auto " ><i class="fa-solid fa-envelope"></i>info@gmail.com</div>
+           <div class="basis-1/2 text-center m-auto"><i class="fa-solid fa-phone"></i>+012 345 6789</div>
+        </div>
+        
+    </div>
