--- a/src/index.html
+++ b/src/index.html
@@ -25,3 +25,11 @@
         </div>
         
     </div>
+     <!--banner-->
+        
+     <div class="p-64 bg-blue-950  w-full  relative before:bg-[url('/img/carousel-1.jpg')] before:absolute before:inset-0 before:content('') before:bg-cover before:opacity-60 z-10 text-center">
+        <p class="isolate text-white text-center">BUSINESS CONSULTANCY</p>
+        <h1 class="isolate text-white text-center text-6xl  font-bold leading-tight">We Provide Solution On<br> Your Business</h1>
+        <button class="px-10 py-4 text-white isolate bg-gradient-to-r from-red-500 to-pink-500 rounded-full mt-4 mr-4 ">Get quote</button>
+        <button class="px-10 py-4 text-black isolate rounded-full bg-gradient-to-r from-white to-slate-300">Contact us</button>
+    </div>
