added Financial Analaysis

--- a/src/index.html
+++ b/src/index.html
@@ -33,3 +33,44 @@
         <button class="px-10 py-4 text-white isolate bg-gradient-to-r from-red-500 to-pink-500 rounded-full mt-4 mr-4 ">Get quote</button>
         <button class="px-10 py-4 text-black isolate rounded-full bg-gradient-to-r from-white to-slate-300">Contact us</button>
     </div>
+    <!-- added Financial Analaysis -->
+    <div  class="px-20 py-40 flex space-x-12 justify-between">
+        <div class="bg-gray-100 basis-1/2 px-10 py-20 ">
+            <h1 class="text-5xl font-bold">Welcome To <a href="" class="text-5xl text-red-600 font-bold">CONSULT</a></h1>
+            <p class="text-red-600 text-2xl my-8">Diam dolor diam ipsum sit. Clita erat ipsum et lorem stet no lorem sit clita duo justo magna dolore</p>
+            <p >Et stet ipsum nonumy rebum eos justo, accusam invidunt aliquyam stet magna at et sanctus, vero sea sit amet dolores, sit dolor duo invidunt dolor, kasd rebum consetetur diam invidunt erat stet. Accusam nonumy lorem kasd eirmod. Justo clita sadipscing ea invidunt rebum sadipscing consetetur. Amet diam amet amet sanctus sanctus invidunt erat ipsum eirmod.
+
+            </p>
+            <button class="px-10 py-4 text-white  bg-gradient-to-r from-red-500 to-pink-500 rounded-full mt-9  ">Get quote</button>
+        </div>
+        <div class="bg-red-500 basis-1/2 px-10 py-20">
+           <div class="flex space-x-3 mb-12">
+            <div class="mt-2">
+                <i class="fa-solid fa-user text-3xl " style="color: #ffffff;"></i>
+            </div>
+            <div>
+            <h1 class="text-4xl font-semibold mb-3">Financial Analaysis</h1>
+            <p class="text-white text-lg">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem sit clita duo</p>
+            </div>
+           </div> 
+           <div class="flex space-x-3 mb-12">
+            <div class="mt-2">
+                <i class="fa-solid fa-chart-line text-3xl" style="color: #ffffff;"></i>
+            </div>
+            <div>
+            <h1 class="text-4xl font-semibold mb-3">legal Advisory</h1>
+            <p class="text-white text-lg">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem sit clita duo</p>
+            </div>
+           </div> 
+           <div class="flex space-x-3">
+            <div class="mt-2">
+                <i class="fa-solid fa-scale-balanced text-3xl" style="color: #ffffff;"></i>
+            </div>
+            <div>
+            <h1 class="text-4xl font-semibold mb-3">Business Planning</h1>
+            <p class="text-white text-lg">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem sit clita duo</p>
+            </div>
+           </div> 
+        </div>
+
+    </div>
