added Business Research

--- a/src/index.html
+++ b/src/index.html
@@ -74,3 +74,42 @@
         </div>
 
     </div>
+
+     <!--Business Research-->
+     <div class="px-20 py-10 ">
+        <div class="m-10"><h1 class="text-5xl text text-center font-bold">What We Offer</h1></div>
+        <div class="mb-24"><hr class="h-1 bg-black w-1/6 m-auto"></div>
+       <div class="grid grid-cols-3 gap-8">
+           <div class="bg-slate-200 p-20 text-center relative  hover:-translate-y-4 duration-700 rounded ">
+               <i class="fa-solid fa-user text-5xl " style="color: #ed0a0a;"></i>
+               <h1 class="text-4xl my-4">Business Research</h1>
+               <p class="">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+           </div>
+           <div class="bg-slate-200 p-20 text-center relative hover:-translate-y-4 duration-700  rounded">
+               <i class="fa-solid fa-user text-5xl " style="color: #ed0a0a;"></i>
+               <h1 class="text-4xl my-4">Business Research</h1>
+               <p class="">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+           </div>
+           <div class="bg-slate-200 p-20 text-center relative hover:-translate-y-4 duration-700  rounded">
+               <i class="fa-solid fa-user text-5xl " style="color: #ed0a0a;"></i>
+               <h1 class="text-4xl my-4">Business Research</h1>
+               <p class="">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+           </div>
+           <div class="bg-slate-200 p-20 text-center relative hover:-translate-y-4 duration-700  rounded">
+               <i class="fa-solid fa-user text-5xl " style="color: #ed0a0a;"></i>
+               <h1 class="text-4xl my-4">Business Research</h1>
+               <p class="">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+           </div>
+           <div class="bg-slate-200 p-20 text-center relative hover:-translate-y-4 duration-700  rouned">
+               <i class="fa-solid fa-user text-5xl " style="color: #ed0a0a;"></i>
+               <h1 class="text-4xl my-4">Business Research</h1>
+               <p class="">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+           </div>
+           <div class="bg-slate-200 p-20 text-center relative hover:-translate-y-4 duration-700 rounded">
+               <i class="fa-solid fa-user text-5xl " style="color: #ed0a0a;"></i>
+               <h1 class="text-4xl my-4">Business Research</h1>
+               <p class="">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+           </div>
+       </div>
+       
+   </div>
