added Free Quote section

--- a/src/index.html
+++ b/src/index.html
@@ -207,4 +207,37 @@
            </div>
         </div>
     </div>
+    <!-- Free Quote section -->
+    <div class="px-20 py-20">
+        <div class="flex space-x-8">
+            <div style="background-image:url('/img/testimonial.jpg');" class="w-full  bg-cover h-[35rem] bg-center basis-1/2">
+
+            </div>
+            <div class="basis-1/2 py-10">
+                <div class=""><h1 class="text-5xl  font-bold mb-10">Request A Free Quote</h1></div>
+                <i class="fa-solid fa-quote-left mb-4" style="color: #e13737;"></i>
+                <p class="text-2xl font-thin">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat dolor rebum sit ipsum.</p> 
+                <div class="flex mt-10 space-x-6">
+                    <div style="background-image: url('/img/testimonial-2.jpg');" class="w-20 h-20  bg-center bg-cover rounded-full"></div>
+                    <div>
+                        <h1 class="text-3xl  font-semibold mt-2 ">
+                            Client-Name
+                        </h1>
+                        <p>
+                            Sumaiya khan
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+
+
+
+
+
+    <a href="#1st-con " class="bg-red-600 h-14 w-14 fixed bottom-10 right-10 flex justify-center items-center rounded "><i class="fa-solid fa-arrow-up text-3xl   " style="color: #ffffff;"></i></a>
 
